// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthResponse.svelte > should render response with changes 1`] = `
<div>
  <!---->
  
  
</div>
`;

exports[`AuthResponse.svelte > should render response with changes 2`] = `
<div>
  <!---->
  <div
    class="flex flex-col w-full"
    data-alert=""
  >
    Successfully logged in
  </div>
  
  
</div>
`;

exports[`AuthResponse.svelte > should render response with error 1`] = `
<div>
  <!---->
  <div
    class="flex flex-col w-full hasError"
    data-alert=""
  >
    An error occurred
  </div>
  
  
</div>
`;
